# py-limiter

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/pylimiter/: limiter.py
src/pylimiter/backend/: default.py  interface.py
