[metadata]
name = py-limiter-sssslyz
version = 0.1.0
author = Limiter
author_email = support@applimiter.com
description = Limiter Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microrg/py-limiter
project_urls =
    Bug Tracker = https://github.com/microrg/py-limiter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src